--- a/molly/apps/stats/templates/stats/index.html
+++ b/molly/apps/stats/templates/stats/index.html
@@ -1,17 +1,17 @@
-{% extends "base.html" %}
+{% extends "base.html" %}{% load i18n %}
 
 {% block content %}
 
 <div class="section">
   <div class="header">
-    <h2>Hit Analysis</h2>
+    <h2>{% trans "Hit Analysis" %}</h2>
   </div>
 
   <ul class="link-list">
-    <li><a href="{% url stats:popular-pages %}">Most Popular Pages</a></li>
-    <li><a href="{% url stats:slow-pages %}">Slow Pages</a></li>
-    <li><a href="{% url stats:popular-404s %}">Most Popular 404s</a></li>
-    <li><a href="{% url stats:popular-devices %}">Most Popular Devices</a></li>
+    <li><a href="{% url stats:popular-pages %}">{% trans "Most Popular Pages" %}</a></li>
+    <li><a href="{% url stats:slow-pages %}">{% trans "Slow Pages" %}</a></li>
+    <li><a href="{% url stats:popular-404s %}">{% trans "Most Popular 404s" %}</a></li>
+    <li><a href="{% url stats:popular-devices %}">{% trans "Most Popular Devices" %}</a></li>
   </ul>
 
 </div>
