--- a/molly/apps/stats/templates/stats/popular_devices.html
+++ b/molly/apps/stats/templates/stats/popular_devices.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "base.html" %}{% load i18n %}
 
 {% block content %}
 
@@ -10,8 +10,8 @@
     <table class="content">
       <thead>
         <tr>
-          <th>Device</th>
-          <th>Share</th>
+          <th>{% trans "Device" %}</th>
+          <th>{% trans "Share" %}</th>
         </tr>
       </thead>
       <tbody>
