--- a/molly/apps/stats/templates/stats/slow_pages.html
+++ b/molly/apps/stats/templates/stats/slow_pages.html
@@ -1,25 +1,26 @@
-{% extends "base.html" %}
+{% extends "base.html" %}{% load i18n %}
 
 {% block content %}
 
 <div class="section">
   <div class="header">
-    <h2>Pages that take a long time to generate (top 20)</h2>
+    <h2>{% trans "Pages that take a long time to generate (top 20)" %}</h2>
   </div>
     
     <table class="content">
       <thead>
         <tr>
-          <th>Page</th>
-          <th>Average Generation Time</th>
-          <th>Requests</th>
+          <th>{% trans "Page" %}</th>
+          <th>{% trans "Average Generation Time" %}</th>
+          <th>{% trans "Requests" %}</th>
         </tr>
       </thead>
       <tbody>
         {% for slow_page in slow_pages %}
         <tr>
           <td><a href="{{ slow_page.full_path }}">{{ slow_page.full_path }}</a></td>
-          <td>{{ slow_page.average_response|floatformat:"3" }} s</td>
+          {# Translators: 's' as in seconds}
+          <td>{% blocktrans with slow_page.average_response|floatformat:"3" as time %}{{ time }} s{% endblocktrans %}</td>
           <td>{{ slow_page.count }}
         </tr>
         {% endfor %}
