--- a/molly/apps/service_status/templates/service_status/index.html
+++ b/molly/apps/service_status/templates/service_status/index.html
@@ -1,14 +1,16 @@
-{% extends "service_status/base.html" %}
+{% extends "service_status/base.html" %}{% load i18n %}
 
 {% block content %}
 
 {% for slug, name, lastBuildDate, statuses, announcements in services %}
 <div class="section">
   <div class="header">
-    <h2>{{ name }} <small>at {{ lastBuildDate|date:"G:i D, j F Y" }}</small></h2>
+    <h2>{% blocktrans with lastBuildDate|date:"DATETIME_FORMAT" as updated_date %}
+        {{ name }} <small>at {{ updated_date }}</small>
+    {% endblocktrans %}</h2>
   </div>
   {% if announcements %}
-  <h3 class="invisible">Service announcements</h3>
+  <h3 class="invisible">{% trans "Service announcements" %}</h3>
   
   <ul class="content-list no-round-bottom">
 {% for announcement in announcements %}
@@ -21,12 +23,12 @@
   </ul>
 {% endif %}
 
-  <h3 class="invisible">Services</h3>
+  <h3 class="invisible">{% trans "Services" %}</h3>
 
   <ul class="content-list service-status-list">
 {% for status in statuses %}
     <li class="service-status-item service-status-{{ status.status }}{% if forloop.last %} round-bottom{% endif %}">
-      <span class="service-status-name">{{ status.name }}</span><br/>
+      <span class="service-status-name">{% trans status.name %}</span><br/>
       <span class="service-status-status">{{ status.status|capfirst }}</span>
 {% if status.statusMessage %}
       <br/>
