Fix more syntax errors

--- a/molly/apps/weather/templates/weather/index.html
+++ b/molly/apps/weather/templates/weather/index.html
@@ -21,10 +21,9 @@
 	<div class="weather-live-info">
 	    <span style="font-size: 36pt;">
 		{% blocktrans with observation.temperature as temperature %} {{ temperature }}&deg;C{% endblocktrans %}</span><br/>
-		{% blocktrans with observation.wind_speed as wind_speed and observation.wind_direction as wind_directrion %}{{ wind_speed }}mph {{ wind_direction }}{% endblocktrans %}<br/>
-		{% blocktrans with observation.humidity as humidity %}{{ humidity }}% Relative Humidity<br/>
-		{% blocktrans with observation.pressure as pressure and observation.get_pressure_state_display as pressure_change }}{{ pressure }} mbar and {{ pressure_change }}{% endblocktrans %}<br/>
-		{{ observation.get_visibility_display|capfirst }}
+		{% blocktrans with observation.wind_speed as wind_speed and observation.wind_direction as wind_direction %}{{ wind_speed }}mph {{ wind_direction }}{% endblocktrans %}<br/>
+		{% blocktrans with observation.humidity as humidity %}{{ humidity }}% Relative Humidity{% endblocktrans %}<br/>
+		{% blocktrans with observation.pressure as pressure and observation.get_pressure_state_display as pressure_change %}{{ pressure }} mbar and {{ pressure_change }}{% endblocktrans %}<br/>
 	</div>
     </div>
 
