--- a/molly/maps/templates/maps/map_elements.html
+++ b/molly/maps/templates/maps/map_elements.html
@@ -1,3 +1,4 @@
+{% load i18n %}
 {% if zoom_controls %}
     {% ifnotequal zoom 10 %}
         <a class="no-icon zoom-out zoomOut" href="?zoom={{ map.zoom|add:"-1" }}" rel="nofollow">
@@ -10,4 +11,5 @@
         </a>
     {% endifnotequal %}
 {% endif %}
-    <div class="osm-license">{% blocktrans %}Map &copy; <a href="{% url maps:osm-about %}">OpenStreetMap</a> and contributors, CC-BY-SA{% endblocktrans %}</div>
+    {% url maps:osm-about as about_link %}
+    <div class="osm-license">{% blocktrans %}Map &copy; <a href="{{ about_link }}">OpenStreetMap</a> and contributors, CC-BY-SA{% endblocktrans %}</div>
