Handful more i18n syntax errors

--- a/molly/apps/webcams/templates/webcams/index.html
+++ b/molly/apps/webcams/templates/webcams/index.html
@@ -1,4 +1,4 @@
-{% extends "webcams/base.html" %}
+{% extends "webcams/base.html" %}{% load i18n %}
 
 {% block pagetitleclass %}webcams-header with-icon{% endblock %}
 {% block pagetitle %}{% trans "Webcams" %}{% endblock %}
