--- a/molly/wurfl/templates/wurfl/index.html
+++ b/molly/wurfl/templates/wurfl/index.html
@@ -15,11 +15,11 @@
           <td>{{ ua }}</td>
         </tr>
         <tr>
-          <th>{% "Accept" %}</th>
+          <th>{% trans "Accept" %}</th>
           <td>{{ accept }}</td>
         </tr>
         <tr>
-          <th>{% "Formats" %}</th>
+          <th>{% trans "Formats" %}</th>
           <td>{{ formats|join:", " }}</td>
       </tbody>
     </table>
