--- a/molly/apps/feature_vote/templates/comments/posted.html
+++ b/molly/apps/feature_vote/templates/comments/posted.html
@@ -1,22 +1,22 @@
-{% extends "comments/base.html" %}{% load comments %}
+{% load i18n %}{% extends "comments/base.html" %}{% load comments %}
 
-{% block title %}Comment submitted{% endblock %}
+{% block title %}{% trans "Comment submitted" %}{% endblock %}
 
 {% block header %}
     <div id="bc-header">
       <ol id="bc">
         <li><a href="{% url home:index %}">
-          <img src="{{ STATIC_URL }}site/images/logo.png" width="57" height="30" alt="Home"/>
+          <img src="{{ STATIC_URL }}site/images/logo.png" width="57" height="30" alt='{% trans "Home" %}'/>
         </a></li>
-        <li><a href="{% url feature_vote:index %}" title="Feature suggestions">
-          <img src="{{ STATIC_URL }}site/images/index-icons/feature_vote-bc.png" alt="Feature suggestions"/>
+        <li><a href="{% url feature_vote:index %}" title='{% trans "Feature suggestions" %}'>
+          <img src="{{ STATIC_URL }}site/images/index-icons/feature_vote-bc.png" alt='{% trans "Feature suggestions" %}'/>
         </a></li>
         <li><a href="{% url feature_vote:feature-detail comment.content_object.id %}" title="{{ comment.content_object.title }}">
           &hellip;
         </a></li>
       </ol> 
       <div id="bc-title">
-        <h1>Add a comment</h1>
+        <h1>{% trans "Add a comment" %}</h1>
       </div>
     </div>
 {% endblock %}
@@ -26,13 +26,13 @@
 
 <div class="section">
   <div class="header">
-    <h2>Comment submitted</h2>
+    <h2>{% trans "Comment submitted" %}</h2>
   </div>
   
   <div class="section-content">
-    <p>Your comment has been submitted.</p>
+    <p>{% trans "Your comment has been submitted." %}</p>
     
-    <p>You may wish to <a href="{% url feature_vote:feature-detail comment.content_object.id %}">go back whence you came</a>.</p>
+    <p><a href="{% url feature_vote:feature-detail comment.content_object.id %}">{% trans "Go back from where you came." %}</a></p>
   </div>
 </div>
 {% endblock %}
