--- a/molly/apps/feeds/templates/feeds/news/item_list.html
+++ b/molly/apps/feeds/templates/feeds/news/item_list.html
@@ -1,14 +1,15 @@
-{% extends "feeds/news/base.html" %}{% load molly_utils %}
+{% load i18n %}{% extends "feeds/news/base.html" %}{% load molly_utils %}
 
 {% block breadcrumbs %}
 {{ block.super }}
             <li><a href="{% url news:index %}">
-                <img src="{{ STATIC_URL }}images/index-icons/rss-bc.png" alt="News"/>
+                <img src="{{ STATIC_URL }}images/index-icons/rss-bc.png" alt='{% trans "News" %}'/>
             </a></li>
 {% endblock %}
 
-{% block pagetitle %}News feed{% endblock %}
-{% block title %}News feed: {{ feed.title }}{% endblock %}
+{% block pagetitle %}{% trans "News feed" %}{% endblock %}
+{# Significant whitespace on next line #}
+{% block title %}{% trans "News feed:" %} {{ feed.title }}{% endblock %}
 
 {% block content %}
 
