--- a/molly/apps/sakai/templates/sakai/evaluation/closed.html
+++ b/molly/apps/sakai/templates/sakai/evaluation/closed.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div class="bubble pad-10">
-  This survey has closed.
+  {% trans "This survey has closed." %}
 </div>
 
 {% endblock %}
