--- a/molly/apps/sakai/templates/sakai/sites.html
+++ b/molly/apps/sakai/templates/sakai/sites.html
@@ -1,6 +1,6 @@
-{% extends "sakai/base.html" %}
+{% extends "sakai/base.html" %}{% load i18n %}
 
-{% block pagetitle %}Sites{% endblock %}
+{% block pagetitle %}{% trans "Sites" %}{% endblock %}
 
 {% block content %}
 
