--- a/molly/apps/sakai/templates/sakai/evaluation/index.html
+++ b/molly/apps/sakai/templates/sakai/evaluation/index.html
@@ -1,42 +1,45 @@
-{% extends "sakai/evaluation/base.html" %}
+{% extends "sakai/evaluation/base.html" %}{% load i18n %}
 
 {% block content %}
 
 <div class="section">
   <div class="header">
-    <h2>Current surveys</h2>
+    <h2>{% trans "Current surveys" %}</h2>
     {% if submitted %}
     <div class="bubble pad-10">
-      Thank you for taking part in the survey; your responses have been safely submitted.
+      {% trans "Thank you for taking part in the survey; your responses have been safely submitted." %}
     </div>
     {% endif %}
   </div>
 
 {% if evaluations %}
   <ul class="link-list">
-{% for evaluation in evaluations %}
+    {% for evaluation in evaluations %}
     <li>
-{% if evaluation.id %}
-      <a href="{% url sakai:evaluation-detail evaluation.id %}">
-{% endif %}
-        {{ evaluation.title }}<br/>
-        <small>
-        <em>{{ evaluation.status }}</em><br/>
-        {{ evaluation.site }}, open from {{ evaluation.start }} until {{ evaluation.end }}</small>
-{% if evaluation.id %}
-      </a>
-{% endif %}
+        {% if evaluation.id %}
+          <a href="{% url sakai:evaluation-detail evaluation.id %}">
+        {% endif %}
+            {{ evaluation.title }}<br/>
+            <small>
+                <em>{{ evaluation.status }}</em><br/>
+                {% blocktrans with evaluation.site as sitename and evaluation.start as start and evaluation.end as end %}
+                    {{ sitename }}, open from {{ start }} until {{ end }}
+                {% endblocktrans %}
+            </small>
+        {% if evaluation.id %}
+          </a>
+        {% endif %}
     </li>
-{% endfor %}
+    {% endfor %}
   </ul>
 {% else %}
   {% if suppress_evaluations %}
-  <ul class="link-list">
-    <li><a href="{% url sakai:evaluation-index %}">Return to survey list</a></li>
-  </ul>
+    <ul class="link-list">
+      <li><a href="{% url sakai:evaluation-index %}">{% trans "Return to survey list" %}</a></li>
+    </ul>
   {% else %}
     <div class="section-content">
-      There are currently no surveys available to complete.
+      {% trans "There are currently no surveys available to complete." %}
     </div>
   {% endif %}
 {% endif %}
