--- a/molly/apps/contact/templates/contact/result_list.html
+++ b/molly/apps/contact/templates/contact/result_list.html
@@ -22,7 +22,7 @@
     {% endif %}
     <div class="section-content{% if results %} no-round-bottom{% endif %}">
       <div class="note"><div class="bubble pad-10">
-        {% blocktrans count counter=results|length %}
+        {% blocktrans count results|length as counter %}
         	Your search returned one item.
 			{% plural %}
 			Your search return {{ counter }} items.
