--- a/molly/apps/home/templates/home/index.html
+++ b/molly/apps/home/templates/home/index.html
@@ -116,7 +116,7 @@
     {% if favourites %}
     <div class="section">
       <div class="header">
-		<h2>Favourites</h2>
+		<h2>{% trans "Favourites" %}</h2>
       </div>
       <ul class="link-list">
       {% for favourite in favourites %}
@@ -128,20 +128,20 @@
 			</a>
 		</li>
       {% endfor %}
-		<li><a href="{% url favourites:index %}"><strong>Manage Favourites</strong></a></li>
+		<li><a href="{% url favourites:index %}"><strong>{% trans "Manage Favourites" %}</strong></a></li>
       </ul>
     </div>
     {% endif %}
 
     <ul class="stand-alone link-list round-top">
 	{% if "feature_vote"|app_is_loaded or "feature-suggestions"|app_is_loaded %}
-            <li class="round-top"><a href="{% url feature_vote:index %}">Suggest a feature</a></li>
+            <li class="round-top"><a href="{% url feature_vote:index %}">{% trans "Suggest a feature" %}</a></li>
 	{% endif %}
-	<li><a href="{% url home:static_about %}">About this site</a></li>
+	<li><a href="{% url home:static_about %}">{% trans "About this site" %}</a></li>
 	{% if has_user_messages %}
-            <li><a href="{% url home:messages %}">Read messages from the developers</a></li>
+            <li><a href="{% url home:messages %}">{% trans "Read messages from the developers" %}</a></li>
 	{% endif %}
-        <li class="round-bottom"><a href="{% url feedback:index %}?referer={% url home:index %}">Provide feedback</a></li>
+        <li class="round-bottom"><a href="{% url feedback:index %}?referer={% url home:index %}">{% trans "Provide feedback" %}</a></li>
     </ul>
 
 	{% block below-about %}
