--- a/molly/apps/home/templates/home/messages.html
+++ b/molly/apps/home/templates/home/messages.html
@@ -1,18 +1,18 @@
-{% extends "home/base.html" %}
+{% load i18n %}{% extends "home/base.html" %}
 
-{% block pagetitle %}Messages{% endblock %}
-{% block title %}Messages from the developers{% endblock %}
+{% block pagetitle %}{% trans "Messages" %}{% endblock %}
+{% block title %}{% trans "Messages from the developers" %}{% endblock %}
 
 {% block content %}
 
 {% if formset.forms %}
 <div class="section">
   <div class="header">
-    <h2>Messages from the developers</h2>
+    <h2>{% trans "Messages from the developers" %}</h2>
   </div>
   <div class="section-content"><div class="note"><div class="bubble pad-10">
-    The developers would like to thank you for using {{ site_name }},
-    and would like to ask your help in making it better.
+    {% trans "The developers would like to thank you for using {{ site_name }},
+    and would like to ask your help in making it better." %}
   </div></div>
 
 
@@ -28,10 +28,11 @@
   <ul>
     <li class="non-link-item top">
       {{ form.instance.message|linebreaks }}
-      <small>Left on <em>{{ form.instance.when|date:"D j M Y, g:i A" }}</em></small><br/>
+ 	  {# Significant whitespace on next line #}
+      <small>{% trans "Left for you on:" %} <em>{{ form.instance.when|date:"D j M Y, g:i A" }}</em></small><br/>
     </li>
     <li>
-      <a href="{% url feedback:index %}?referer={{ path }}&#35;{{ form.instance.when|date:"YmdHis" }}">Respond to this message</a>
+      <a href="{% url feedback:index %}?referer={{ path }}&#35;{{ form.instance.when|date:"YmdHis" }}">{% trans "Respond to this message" %}</a>
     </li>
     <li class="non-link-item">
       {{ form.DELETE }} {{ form.DELETE.label_tag }}
@@ -44,7 +45,7 @@
 {% endfor %}
 
 <div style="text-align:center">
-  <input type="submit" value="Delete selected"/>
+  <input type="submit" value='{% trans "Delete selected" %}'/>
 </div>
 
 </form>
@@ -53,10 +54,10 @@
 
 <div class="section">
   <div class="header">
-    <h2>Messages from the developers</h2>
+    <h2>{% trans "Messages from the developers" %}</h2>
   </div>
   <div class="section-content"><div class="note"><div class="bubble pad-10">
-    You have no messages
+    {% trans "You have no messages" %}
   </div></div></div>
 </div>
 </div>
