Repositioned load i18n tag in templates

--- a/molly/apps/feature_vote/templates/comments/posted.html
+++ b/molly/apps/feature_vote/templates/comments/posted.html
@@ -1,5 +1,5 @@
-{% load i18n %}{% extends "comments/base.html" %}{% load comments %}
-
+{% extends "comments/base.html" %}{% load comments %}
+{% load i18n %}
 {% block title %}{% trans "Comment submitted" %}{% endblock %}
 
 {% block header %}
