--- a/molly/apps/feature_vote/templates/feature_vote/feature_detail.html
+++ b/molly/apps/feature_vote/templates/feature_vote/feature_detail.html
@@ -1,5 +1,5 @@
-{% load i18n %}{% extends "feature_vote/base.html" %}{% load comments %}
-
+{% extends "feature_vote/base.html" %}{% load comments %}
+{% load i18n %}
 {% block content %}
 
 <div class="section">
