--- a/molly/apps/feedback/templates/feedback/index.html
+++ b/molly/apps/feedback/templates/feedback/index.html
@@ -1,5 +1,5 @@
-{% load i18n %}{% extends "feedback/base.html" %}
-
+{% extends "feedback/base.html" %}
+{% load i18n %}
 {% block content %}
 
 {% if sent %}
