--- a/molly/apps/feeds/templates/feeds/events/index.html
+++ b/molly/apps/feeds/templates/feeds/events/index.html
@@ -1,5 +1,5 @@
-{% load i18n %}{% extends "feeds/events/base.html" %}{% load molly_search %}
-
+{% extends "feeds/events/base.html" %}{% load molly_search %}
+{% load i18n %}
 {% block content %}
 
 {# News Search #}
