--- a/molly/apps/home/templates/home/messages.html
+++ b/molly/apps/home/templates/home/messages.html
@@ -1,5 +1,5 @@
-{% load i18n %}{% extends "home/base.html" %}
-
+{% extends "home/base.html" %}
+{% load i18n %}
 {% block pagetitle %}{% trans "Messages" %}{% endblock %}
 {% block title %}{% trans "Messages from the developers" %}{% endblock %}
 
