--- a/molly/templates/base.html
+++ b/molly/templates/base.html
@@ -1,4 +1,4 @@
-{% load i18n %}{% load molly_utils %}{% load compressed %}<!DOCTYPE HTML>
+{% load molly_utils %}{% load compressed %}{% load i18n %}<!DOCTYPE HTML>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-GB" lang="en-GB">
 {% comment %}
 	Welcome to Molly's base.html. Virtually all pages in Molly inherit from this page.
