--- a/molly/apps/feeds/templates/feeds/events/item_detail.html
+++ b/molly/apps/feeds/templates/feeds/events/item_detail.html
@@ -1,5 +1,5 @@
-{% load i18n %}{% extends "feeds/events/base.html" %}{% load molly_maps %}
-
+{% extends "feeds/events/base.html" %}{% load molly_maps %}
+{% load i18n %}
 {% block breadcrumbs %}
 {{ block.super }}
             <li><a href="{% url events:index %}">
