--- a/molly/apps/feeds/templates/feeds/news/item_list.html
+++ b/molly/apps/feeds/templates/feeds/news/item_list.html
@@ -1,5 +1,5 @@
-{% load i18n %}{% extends "feeds/news/base.html" %}{% load molly_utils %}
-
+{% extends "feeds/news/base.html" %}{% load molly_utils %}
+{% load i18n %}
 {% block breadcrumbs %}
 {{ block.super }}
             <li><a href="{% url news:index %}">
