--- a/molly/apps/podcasts/templates/podcasts/category_detail.html
+++ b/molly/apps/podcasts/templates/podcasts/category_detail.html
@@ -5,7 +5,7 @@
 
 <div class="section">
   <div class="header">
-    <h2>{{ category.name }}</h2>
+    <h2>{% trans category.name %}</h2>
     {% trans "Show:" %}
     {% comment %} the non-breaking spaces are to combat a bug in slimmer,
 		  where it is over zealous in removing the spaces
